--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     },
     "require": {
-        "debugbird/php": "dev-main",
+        "debugbird/php": "1.0.0",
         "illuminate/support": "^9.0|^10.0|^11.0"
     },
     "extra": {
